--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,146 @@ body {
 }
 :root {
     --c-white: #ffffff;
+    --c-grey: #F2F2F2;
     --c-black: #000000;
+    --c-braun: #5e5373;
 }
-/* HEAFER */
-
+/* HEADER */
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+    z-index: 50;
+}
+.header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--c-white);
+    z-index: 2;
+}
+.header__body {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 110px;
+    align-items: center;
+}
+.header__logo {
+    flex: 0 0 110px;
+    display: block;
+    position: relative;
+    z-index: 3;
+}
+.header__logo img {
+    max-width: 100%;
+}
+.header__burger {
+    display: none;
+}
+.header__list {
+    display: flex;
+    position: relative;
+    z-index: 2;
+}
+.header__list li {
+    list-style: none;
+    margin: 0px 0px 0px 20px;
+}
+.header__link {
+    color: var(--c-black);
+    text-transform: uppercase;
+    font-size: 18px;
+    text-decoration: none;
+}
+@media (max-width: 767px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .header__body {
+        height: 50px;
+    }
+    .header__logo {
+      flex: 0 0 50px;  
+    }
+    .header__burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 3;
+    }
+    .header__burger span {
+        position: absolute;
+        background-color: var(--c-black);
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger::before,
+    .header__burger::after {
+        content: '';
+        background-color: var(--c-black);
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger::before {
+        top: 0;
+    }
+    .header__burger::after {
+        bottom: 0;
+    }
+    .header__burger.active span  {
+        transform: scale(0);
+    }
+    .header__burger.active::before  {
+        transform: rotate(45deg);
+        top: 9px;
+        background-color: var(--c-black);
+    }
+    .header__burger.active::after  {
+        transform: rotate(-45deg);
+        bottom: 9px;
+        background-color: var(--c-black);
+    }
+    .header__menu {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        transition: all 0.3s ease 0s;
+        background-color: var(--c-white);
+        padding: 90px 20px 20px 20px;
+        
+    }
+    .header__menu.active {
+        top: 0px;
+    }
+    .header__list {
+        display: block;
+    }
+    .header__list li {
+        margin: 0px 0px 10px 15px;
+    }
+}
+.content {
+    padding: 140px 0px 0px 0px;
+}
+@media (max-width: 767px) {
+    .content {
+        padding: 70px 0px 0px 0px; 
+    }
+}
 /* END HEADER */
